--- a/salary/css/style.css
+++ b/salary/css/style.css
@@ -42,7 +42,7 @@ body {
 }
 
 button {
-  border-radius: 4px;
+  border-radius: 8px;
 }
 
 .main {
@@ -250,16 +250,8 @@ button {
   filter: drop-shadow(5px 5px 5px #fff);
 }
 
-.donate {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 10px 0;
-  margin-top: 45px;
-  position: relative;
-}
-
-.donate-link {
+.donate-link,
+.link-instruction {
   display: block;
   padding: 20px 15px;
   margin-bottom: 40px;
@@ -267,14 +259,16 @@ button {
   border-radius: 2px;
   text-align: center;
   text-decoration: none;
-  text-transform: uppercase;
-  font-size: 4rem;
+  text-transform: uppercase;  
+  font-size: 3rem;
   color: rgb(0, 94, 255);
   background-color: rgba(255, 196, 0, 0.477);
 }
 
 .reset {
   align-self: flex-end;
+  margin-top: auto;
+  margin-bottom: 120px;
 }
 
 .line5 {
@@ -291,35 +285,102 @@ button {
   font-weight: 300;
 }
 
-.display-none {
-  display: none;
-}
-
 .top-donaters {
   display: flex;
   flex-direction: column;
+  overflow: hidden;
+  max-width: 100%;
+  min-height: 190px;
 }
 
 .top-donaters_head {
-  margin: 40px 0;
+  margin: 45px 0;
   text-align: center;
   font-size: 3rem;
+  z-index: 1000;
 }
 
 .top-donaters_list {
-  margin-bottom: 10vh;
+  min-width: fit-content;
+  margin-bottom: 3vh;
   display: flex;
-  flex-direction: column;
-  list-style: none;
+  align-items: center;
+  list-style: none;  
 }
 
 .donater {
   padding: 10px;
   display: block;
-  margin-bottom: 20px;
+  margin-right: 30px;
+  min-width: fit-content;
   text-align: center;
   border-radius: 5px;
   font-size: 3rem;  
   font-weight: normal;
   background-color: rgba(255, 255, 255, 0.3);
 }
+
+.video-instruction {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: #fff;
+  z-index: 1000;
+}
+
+.close-btn {
+  position: relative;
+  margin-top: 25px;
+  margin-left: 25px;
+  padding: 5px 15px;
+  width: fit-content;
+  border: 4px solid red;
+  border-radius: 10px;  
+  font-size: 4rem;
+  background-color: rgba(255, 255, 255, 0.8);
+  z-index: 1000;
+}
+
+.link-instruction {
+  margin: 40px 0;
+}
+
+.video-instruction-img {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: auto;
+}
+
+.ref-frame {
+  font-size: 50%;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: #fffffff5;
+  z-index: 1000;
+}
+
+.ref-header {
+  padding: 20px;
+}
+
+.ref-list {
+  padding: 40px;
+  margin-left: 10px;
+  width: 100%;
+}
+.ref-item:not(:last-of-type) {
+  margin-bottom: 40px;
+  text-align: justify;
+}
+
+
+.display-none {
+  display: none;
+}
+
